# hyprdecor

./: CMakeLists.txt  Makefile  README.md  flake.nix  hyprland.conf  hyprpm.toml
src/: hyprWindowDecorator.cpp  hyprWindowDecorator.hpp  main.cpp  plugin.cpp  plugin.hpp  renderPassElement.cpp  renderPassElement.hpp  util.hpp
